<resources>
    <string name="app_name">AllKana</string>
    <string name="title_Hiragana">Hiragana</string>
    <string name="title_Katakana">Katakana</string>
    <string name="diacritics">Dakuten &amp; Handakuten</string>
    <string name="combo">Combo</string>

    <!-- HIRAGANA PAGE -->
    <string name="hiraganaLearn">Learn Hiragana</string>
    <string name="hiraganaQuiz">Quiz Hiragana</string>

    <!-- KATAKANA PAGE -->
    <string name="katakanaLearn">Learn Katakana</string>
    <string name="katakanaQuiz">Quiz Katakana</string>

    <!-- MENU STRINGS -->
    <string name="theme_menu">Theme</string>
    <string name="rate_menu">Rate</string>
    <string name="support_menu">Support</string>

    <!-- HOME STRINGS -->
    <string name="hiragana_progress">Hiragana progress: </string>
    <string name="katakana_progress">Katakana progress: </string>
    <string name="title_activity_quiz_hiragana">QuizActivityHiragana</string>

    <!-- QUIZ STRINGS -->
    <string name="answer_button">Answer</string>
    <string name="ok_answer_text">True</string>
    <string name="wrong_answer_text">False</string>
    <string name="completed">Completed!</string>
    <string name="ok_answer_results">Correct:</string>
    <string name="wrong_answer_results">Wrong:</string>
    <string name="back_to_home_button">Back to home</string>
</resources>
